@@ -1,3 +1,15 @@
+2014-06-13  Alejandro Gallardo <alejandro.gallardo@artica.es>
+	
+	* godmode/agentes/module_manager_editor_plugin.php,
+	  include/javascript/pandora_modules.js: Fixed an error
+	that created duplicated macro fields when selecting
+	a local component module #927.
+	
+	* include/graphs/flot/pandora.flot.js: Now the spacing
+	of the vertical data description is automatic.
+
+	* include/styles/pandora_black.css: Visual changes.
+
 2014-06-13  Sergio Martin <sergio.martin@artica.es>
 
 	* godmode/reporting/visual_console_builder.editor.js
